Fix issues with z-index

--- a/material-ripple.css
+++ b/material-ripple.css
@@ -4,6 +4,8 @@
   cursor: pointer;
   user-select: none;
   box-sizing: border-box;
+  outline: none;
+  -webkit-tap-highlight-color: transparent; 
 }
 
 .material-ripple-ink {
@@ -18,6 +20,12 @@
   left: var(--material-ripple-ink-left, 0);
   bottom: 0;
   right: 0;
+  z-index: 0;
+}
+
+.material-ripple-ink ~ :not(.material-ripple-ink) {
+  z-index: 1;
+  position: relative;
 }
 
 .material-ripple-ink-animate {
